drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog


GIT HEAD

- Avoid issuing NSM dirty messages as much as possible.
- Prepping bump to next v0.9.25...


0.9.24  2022-01-09  A Winter'22 Release.

- Dropped autotools (autoconf, automake, etc.) build system.
- Fixed deprecate warnings in preparation for Qt >= 6.2.


0.9.23  2021-07-07  An Early-Summer'21 Release.

- Add support for LV2 UI Windows platform (by AnClark, while
  on synthv1).
- Sustain/Damper/Hold (MIDI CC#64) and Sustenuto (MIDI CC#66)
  pedal controllers are now implemented.
- Have some tolerance for buffer-size changes.
- All builds default to Qt6 (Qt >= 6.1) where available.
- CMake is now the official build system.


0.9.22  2021-05-13  A Spring'21 Release.

- All packaging builds switching to CMake.


0.9.21  2021-03-16  An End-of-Winter'21 Release.

- Fixed an old lurker, causing slight differences to voice
  on-sets, due to a wrong initial LFO Volume ramping value.
- Slightly improved eye-candyness to all graphic widgets,
  most especially on the EG widget handling, curved lines
  and gradient fills.


0.9.20  2021-02-10  A Winter'21 Release.

- When under under the NSM auspices, fix SIGTERM handler
  on exit and just hide the main-window on close (applies
  to the JACK stand-alone only).


0.9.19  2020-12-19  A Winter'20 Release.

- Better handling of the offset range when in presence of
  very long sample files.
- Fixed display of old knob/dial values on status-bar.
- Reduced formant filter coefficient slew rate, aiming
  to a tenfold DSP performance gain.
- Get a chance on bringing Wayland into the picture when
  dealing Qt static-linked deliverables.


0.9.18  2020-10-27  A Fall'20 Release.

- Upstream package naming for the JACK standalone and LV2
  plugin deliverables are suffixed to '-jack' and '-lv2',
  respectively.
- Fixed note-off effectiveness when DCA is disabled (idle).
- White keys on the virtual piano keyboard are now fully